[UI] Fix nav tabs wrap (#14001)
* [UI] Custom scroll bar for overflows

* [UI] Fix nav tabs wrap

* revert

* [UI] Fix nav tabs wrap

* fix test

* removing unused code

--- a/app/bundles/CoreBundle/Assets/css/app.css
+++ b/app/bundles/CoreBundle/Assets/css/app.css
@@ -2704,8 +2704,11 @@ ul.dropdown-menu-form {
   border-top-right-radius: var(--border-radius-sm);
   border-top-left-radius: var(--border-radius-sm);
   display: flex;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
+  overflow: hidden;
+  position: relative;
   text-wrap: nowrap;
+  scroll-behavior: smooth;
 }
 .nav-tabs > li > a {
   line-height: 20px;
@@ -2796,6 +2799,8 @@ ul.dropdown-menu-form {
 .stats-menu__content.tab-content > .tab-pane {
   width: 100%;
 }
+.nav-tabs-wrapper:has(.nav-tabs-contained) + .tab-content,
+.nav-tabs-wrapper:has(.nav-tabs-contained) + form > .tab-content,
 .nav-tabs-contained + .tab-content,
 .nav-tabs-contained + form > .tab-content {
   background-color: var(--layer);
@@ -2815,6 +2820,53 @@ ul.dropdown-menu-form {
 }
 .stats-menu.stats-menu + div {
   min-height: 410px;
+}
+/* nav-tabs-wrapper styles */
+.nav-tabs-wrapper {
+  position: relative;
+  overflow: hidden;
+  margin-bottom: -1px;
+}
+.scroll-btn {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  border: none;
+  background-color: var(--layer-accent);
+  cursor: pointer;
+  z-index: 10;
+  display: none;
+  align-items: center;
+  justify-content: center;
+  font-size: 18px;
+  padding: 0;
+  inline-size: 40px;
+  aspect-ratio: 1 / 1;
+}
+.scroll-btn:before {
+  position: absolute;
+  z-index: 1;
+  background: linear-gradient(to right, rgba(255, 255, 255, 0), var(--background, #ffffff));
+  block-size: 100%;
+  content: "";
+  inline-size: 0.5rem;
+  inset-inline-end: -0.5rem;
+  background-image: linear-gradient(to right, rgba(255, 255, 255, 0), var(--layer-accent));
+}
+.left-btn {
+  inset-inline-start: 0;
+}
+.left-btn:before {
+  transform: scaleX(-1);
+}
+.right-btn {
+  inset-inline-end: 0;
+}
+.nav-tabs-wrapper.show-scroll-buttons .scroll-btn:disabled {
+  display: none;
+}
+.nav-tabs-wrapper.show-scroll-buttons .scroll-btn {
+  display: flex;
 }
 .notes {
   overflow: hidden;
@@ -7241,6 +7293,20 @@ ul.media-list.media-list-feed div.media-body {
     transform: scale(1);
     opacity: 0;
   }
+}
+/* Webkit-based browsers custom scroll */
+::-webkit-scrollbar {
+  width: 5px;
+  height: 5px;
+}
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
 .tooltip-inner {
   padding: 12px;
